--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,4 +13,6 @@
 @import './layouts/benefits';
 @import './layouts/questioning';
 @import './layouts/team';
-@import './layouts/customers'
+@import './layouts/customers';
+@import './base/mobile-menu';
+@import './layouts/media';
