--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,10 @@
 }
 
 .container {
-  margin: 0 auto;
-  width: 1158px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
 }
 
 .link {
@@ -131,8 +131,7 @@ address {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 16px;
 }
 
 .logo {
@@ -157,39 +156,53 @@ address {
 .burger-button__icon {
   width: 32px;
   height: 22px;
-  bottom: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50% -50%);
-          transform: translate(-50% -50%);
   fill: var(--color-navy-blue);
 }
 
-.hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/hero/people-office.png);
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.png);
-  background-size: cover;
+.burger-button {
+  background-color: transparent;
+  border: none;
+  line-height: 0;
+  padding: 0;
 }
-.hero__container {
+
+.navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+.hero {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/mobile-images/mobile__hero-background.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-images/mobile__hero-background.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.hero__container {
+  padding-top: 112px;
+  padding-bottom: 112px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .hero__title {
-  font-size: 56px;
+  font-size: 36px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #FFFFFF;
   text-align: center;
-  width: 496px;
+  max-width: 320px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -199,46 +212,39 @@ address {
 }
 .hero .main-btn__hero {
   background-color: #4D5AE5;
+  display: block;
   padding: 16px 32px;
 }
 .hero .main-btn__hero:is(:hover, :focus) {
-  background-color: #404BBF;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .benefits__container {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
-.benefits__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 24px;
+.benefits .benefits__list {
+  max-width: 396px;
 }
 .benefits__item {
-  width: 264px;
-}
-.benefits__img-background {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: #F4F4FD;
-  border-radius: 4px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 24px;
-  padding-top: 24px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 72px;
+}
+.benefits__img-background {
+  display: none;
 }
 .benefits__logo {
-  width: 64px;
-  height: 64px;
+  display: none;
 }
 .benefits__title {
   font-weight: 500;
@@ -278,8 +284,8 @@ address {
 
 .team {
   background-color: var(--color-cloud);
-  padding-top: 111px;
-  padding-bottom: 129px;
+  padding-top: 96px;
+  padding-bottom: 128px;
 }
 .team__title {
   font-size: 36px;
@@ -294,7 +300,14 @@ address {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 24px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 72px;
 }
 .team__img {
   width: 264px;
@@ -364,8 +377,8 @@ address {
 }
 
 .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .customers__title {
   font-size: 36px;
@@ -383,7 +396,12 @@ address {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 24px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 16px;
+     -moz-column-gap: 16px;
+          column-gap: 16px;
+  row-gap: 72px;
 }
 .customers__link {
   display: -webkit-box;
@@ -414,4 +432,394 @@ address {
   fill: var(--color-tuman-white);
   -webkit-transition: fill var(--main-animation);
   transition: fill var(--main-animation);
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    background-color: var(--color-mega-white);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 24px 24px 40px 40px;
+  }
+  .mobile-menu__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    position: relative;
+    width: 100%;
+  }
+  .mobile-menu__navigation {
+    padding-top: 56px;
+    margin-bottom: auto;
+  }
+  .mobile-menu__navigation-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .mobile-menu__close-btn {
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 8px;
+    margin-left: auto;
+    margin-bottom: auto;
+  }
+  .mobile-menu__navigation-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+  }
+  .mobile-menu__navigation-link--active {
+    color: #404BBF;
+  }
+  .mobile-menu__navigation {
+    margin-bottom: auto;
+  }
+  .mobile-menu__contacts {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+  }
+  .mobile-menu__contacts-item:last-child {
+    margin-top: 40px;
+  }
+  .mobile-menu__contacts-number {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11px;
+    letter-spacing: 0.02em;
+    color: #4D5AE5;
+  }
+  .mobile-menu__contacts-email {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+  .mobile-menu__social-setings-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    max-width: 328px;
+    margin-left: 25px;
+    margin-right: 45px;
+  }
+  .mobile-menu__social-logo {
+    width: 24px;
+    height: 24px;
+    fill: #f4f4fd;
+  }
+}
+@media screen and (max-width: 420px) {
+  .mobile-menu__contacts-number {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .mobile-menu__contacts-number {
+    font-size: 25px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 426px;
+  }
+  .benefits__list {
+    width: 396px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .questioning {
+    display: none;
+  }
+}
+@media screen and (max-width: 390px) {
+  .customers__list {
+    row-gap: 35px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 766px;
+  }
+  .header {
+    position: relative;
+    height: 70px;
+  }
+  .burger-button {
+    display: none;
+  }
+  .navigation__list {
+    display: block;
+  }
+  .navigation__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .address {
+    display: block;
+    height: 34px;
+  }
+  .navigation__link--studio::after {
+    margin-top: 18px;
+    display: block;
+    background: #404BBF;
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    content: "";
+    position: absolute;
+    color: var(--color-ocean);
+  }
+  .address__link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17px;
+    letter-spacing: 0.04em;
+    color: #434455;
+    -webkit-transition: color var(--main-animation);
+    transition: color var(--main-animation);
+  }
+  .address-list {
+    row-gap: 6px;
+  }
+  .address {
+    position: absolute;
+    top: 24px;
+    right: 16px;
+    bottom: auto;
+  }
+  .navigation__link {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    -webkit-transition: color var(--main-animation);
+    transition: color var(--main-animation);
+  }
+  .hero__title {
+    font-size: 56px;
+    max-width: 496px;
+  }
+  .benefits__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-column-gap: 24px;
+       -moz-column-gap: 24px;
+            column-gap: 24px;
+    row-gap: 72px;
+    max-width: 736px;
+    min-width: 736px;
+  }
+  .benefits__item {
+    max-width: 356px;
+  }
+  .benefits__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  }
+  .benefits__text {
+    font-weight: 500;
+  }
+  .team {
+    padding-bottom: 104px;
+  }
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    row-gap: 64px;
+    -webkit-column-gap: 24px;
+       -moz-column-gap: 24px;
+            column-gap: 24px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .customers__list {
+    -webkit-column-gap: 24px;
+       -moz-column-gap: 24px;
+            column-gap: 24px;
+    row-gap: 72px;
+  }
+  .customers {
+    padding-top: 93px;
+  }
+  .footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__information {
+    margin-bottom: 72px;
+    margin-right: 24px;
+  }
+  .footer-social-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .footer-subscribe-input {
+    width: 264px;
+    margin-bottom: 0;
+    margin-right: 24px;
+  }
+  .subscribe-form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .subscribe-section {
+    width: 453px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .subscribe-btn {
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+  }
+  .logo {
+    margin-right: 76px;
+  }
+  .address {
+    position: relative;
+    top: 0;
+    right: 0;
+  }
+  .address__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .address__item:not(:last-child) {
+    padding-right: 40px;
+  }
+  .address:is(:hover, :focus) {
+    color: #404BBF;
+  }
+  .address .address__link {
+    font-size: 16px;
+  }
+  .hero__container {
+    padding: 188px 0;
+  }
+  .benefits__img-background {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background: #F4F4FD;
+    border-radius: 4px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 24px;
+    padding-top: 24px;
+    width: 264px;
+    height: 112px;
+  }
+  .benefits__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 64px;
+    height: 64px;
+  }
+  .benefits__item {
+    max-width: 264px;
+  }
+  .benefits__title {
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .benefits__item {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .benefits__list {
+    row-gap: 0;
+    max-width: 100%;
+    min-width: 100%;
+  }
+  .benefits__text {
+    font-weight: 400;
+  }
+  .footer__container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .footer-social-container {
+    margin-right: 80px;
+  }
+  .footer__information {
+    margin-bottom: 0;
+    margin-right: 120px;
+  }
 }/*# sourceMappingURL=main.css.map */
