--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,15 @@ body {
 
 .footer__container {
     display: flex;
-    padding-top: 91px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer__information {
-    margin-right: 120px;
+    text-align: center;
+    margin-bottom: 72px;
 }
 
 .footer__logo {
@@ -122,7 +125,6 @@ body {
     text-transform: uppercase;
     color: var(--color-iris);
     display: inline;
-    margin-bottom: 16px;
 }
 
 .footer__text {
@@ -131,6 +133,7 @@ body {
     letter-spacing: 0.02em;
     color: #E7E9FC;
     width: 264px;
+    margin-top: 16px;
 }
 
 .footer__title {
@@ -140,6 +143,13 @@ body {
     letter-spacing: 0.02em;
     color: #FFFFFF;
     margin-bottom: 16px;
+}
+
+.footer-social-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 72px;
 }
 
 .footer__media-list {
@@ -295,11 +305,17 @@ body {
 
 
 .subscribe-section {
-    margin-left: auto
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .subscribe-form {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .subscribe-btn-icon {
@@ -324,7 +340,6 @@ body {
     transition: background-color var(--main-animation);
     display: flex;
     justify-content: center;
-
 }
 
 .footer-subscribe-input {
@@ -339,9 +354,8 @@ body {
     letter-spacing: 0.04em;
     color: var(--color-mega-white);
     outline: transparent;
-    width: 264px;
-    margin-right: 24px;
-
+    width: 100%;
+    margin-bottom: 16px;
 }
 
 .subscribe-btn:is(:hover, :focus) {
@@ -573,3 +587,5 @@ body {
 .form-checkbox-input:checked+.modal-checkbox-icon-wrapper .modal-checkbox-icon-svg {
     opacity: 1;
 }
+
+
