--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,6 +1,7 @@
 .container {
-    margin: 0 auto;
-    width: 1158px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
-}
+    margin: 0 auto;
+  }
+
