--- a/scss/layouts/_benefits.scss
+++ b/scss/layouts/_benefits.scss
@@ -1,28 +1,26 @@
 .benefits {
 
     &__container {
-        padding-top: 120px;
-        padding-bottom: 120px;
+        padding-top: 96px;
+        padding-bottom: 96px;
     }
+    &
+    
     &__list {
-        display: flex;
-        flex-direction: row;
-        gap: 24px;
+        max-width: 396px;
     }
+
     &__item {
-        width: 264px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 72px;
     }
     &__img-background {
-        display: flex;
-        background: #F4F4FD;
-        border-radius: 4px;
-        justify-content: center;
-        padding-bottom: 24px;
-        padding-top: 24px;
+        display: none;
     }
     &__logo {
-        width: 64px;
-        height: 64px;
+       display: none;
     }
     &__title {
         font-weight: 500;
@@ -40,3 +38,11 @@
         color: var(--color-slate);
     }
 }
+
+
+// &__img-background {
+//     
+// }
+// &__logo {
+//     
+// }
