--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -1,7 +1,7 @@
 .team {
     background-color: var(--color-cloud);
-    padding-top: 111px;
-    padding-bottom: 129px;
+    padding-top: 96px;
+    padding-bottom: 128px;
 
     &__title {
         font-size: 36px;
@@ -14,8 +14,11 @@
     }
     &__list {
         display: flex;
-        gap: 24px;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 72px;
     }
+    
     &__img {
         width: 264px;
     }
