--- a/css/main.css
+++ b/css/main.css
@@ -262,26 +262,6 @@ address {
   color: var(--color-slate);
 }
 
-.questioning__container {
-  padding-bottom: 120px;
-}
-.questioning__title {
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: #2E2F42;
-  margin-bottom: 72px;
-}
-.questioning__img-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 24px;
-}
-
 .team {
   background-color: var(--color-cloud);
   padding-top: 96px;
@@ -553,6 +533,8 @@ address {
 @media screen and (min-width: 480px) {
   .container {
     width: 426px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .benefits__list {
     width: 396px;
@@ -568,20 +550,44 @@ address {
     row-gap: 35px;
   }
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/mobile-images/mobile__hero-background@2x.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-images/mobile__hero-background@2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .container {
     width: 766px;
   }
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/tablet-images/hero-background-tablet.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-images/hero-background-tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/tablet-images/hero-background-tablet@2x.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-images/hero-background-tablet@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
   .header {
     position: relative;
     height: 70px;
   }
+}
+@media screen and (min-width: 768px) {
   .burger-button {
     display: none;
   }
+}
+@media screen and (min-width: 768px) {
   .navigation__list {
     display: block;
   }
+}
+@media screen and (min-width: 768px) {
   .navigation__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -590,10 +596,19 @@ address {
     margin-left: auto;
     margin-right: auto;
   }
+}
+@media screen and (min-width: 768px) {
+  .questioning {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
   .address {
     display: block;
     height: 34px;
   }
+}
+@media screen and (min-width: 768px) {
   .navigation__link--studio::after {
     margin-top: 18px;
     display: block;
@@ -605,6 +620,8 @@ address {
     position: absolute;
     color: var(--color-ocean);
   }
+}
+@media screen and (min-width: 768px) {
   .address__link {
     font-weight: 400;
     font-size: 12px;
@@ -614,15 +631,21 @@ address {
     -webkit-transition: color var(--main-animation);
     transition: color var(--main-animation);
   }
+}
+@media screen and (min-width: 768px) {
   .address-list {
     row-gap: 6px;
   }
+}
+@media screen and (min-width: 768px) {
   .address {
     position: absolute;
     top: 24px;
     right: 16px;
     bottom: auto;
   }
+}
+@media screen and (min-width: 768px) {
   .navigation__link {
     font-family: "Roboto";
     font-style: normal;
@@ -634,10 +657,14 @@ address {
     -webkit-transition: color var(--main-animation);
     transition: color var(--main-animation);
   }
+}
+@media screen and (min-width: 768px) {
   .hero__title {
     font-size: 56px;
     max-width: 496px;
   }
+}
+@media screen and (min-width: 768px) {
   .benefits__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -651,20 +678,30 @@ address {
     max-width: 736px;
     min-width: 736px;
   }
+}
+@media screen and (min-width: 768px) {
   .benefits__item {
     max-width: 356px;
   }
+}
+@media screen and (min-width: 768px) {
   .benefits__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
   }
+}
+@media screen and (min-width: 768px) {
   .benefits__text {
     font-weight: 500;
   }
+}
+@media screen and (min-width: 768px) {
   .team {
     padding-bottom: 104px;
   }
+}
+@media screen and (min-width: 768px) {
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -683,15 +720,21 @@ address {
         -ms-flex-direction: row;
             flex-direction: row;
   }
+}
+@media screen and (min-width: 768px) {
   .customers__list {
     -webkit-column-gap: 24px;
        -moz-column-gap: 24px;
             column-gap: 24px;
     row-gap: 72px;
   }
+}
+@media screen and (min-width: 768px) {
   .customers {
     padding-top: 93px;
   }
+}
+@media screen and (min-width: 768px) {
   .footer__container {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -703,10 +746,14 @@ address {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+}
+@media screen and (min-width: 768px) {
   .footer__information {
     margin-bottom: 72px;
     margin-right: 24px;
   }
+}
+@media screen and (min-width: 768px) {
   .footer-social-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -716,11 +763,15 @@ address {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+}
+@media screen and (min-width: 768px) {
   .footer-subscribe-input {
     width: 264px;
     margin-bottom: 0;
     margin-right: 24px;
   }
+}
+@media screen and (min-width: 768px) {
   .subscribe-form {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -730,23 +781,46 @@ address {
         -ms-flex-pack: center;
             justify-content: center;
   }
+}
+@media screen and (min-width: 768px) {
   .subscribe-section {
     width: 453px;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
   }
+}
+@media screen and (min-width: 768px) {
   .subscribe-btn {
     height: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
   }
 }
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
   }
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/hero/people-office.png);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.png);
+  }
+}
+@media screen and (min-width: 1158px) and (min-device-pixel-ratio: 2), screen and (min-width: 1158px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1158px) and (min-resolution: 192dpi), screen and (min-width: 1158px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url(../images/hero/hero-desktop-bg@2x.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-desktop-bg@2x.jpg);
+  }
+}
+@media screen and (min-width: 1158px) {
   .logo {
     margin-right: 76px;
   }
+}
+@media screen and (min-width: 1158px) {
   .address {
     position: relative;
     top: 0;
@@ -766,9 +840,13 @@ address {
   .address .address__link {
     font-size: 16px;
   }
+}
+@media screen and (min-width: 1158px) {
   .hero__container {
     padding: 188px 0;
   }
+}
+@media screen and (min-width: 1158px) {
   .benefits__img-background {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -810,6 +888,8 @@ address {
   .benefits__text {
     font-weight: 400;
   }
+}
+@media screen and (min-width: 1158px) {
   .footer__container {
     -webkit-box-align: start;
         -ms-flex-align: start;
@@ -821,5 +901,29 @@ address {
   .footer__information {
     margin-bottom: 0;
     margin-right: 120px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .questioning {
+    display: block;
+  }
+  .questioning__container {
+    padding-bottom: 120px;
+  }
+  .questioning__title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 72px;
+  }
+  .questioning__img-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 24px;
   }
 }/*# sourceMappingURL=main.css.map */
