--- a/scss/layouts/_media.scss
+++ b/scss/layouts/_media.scss
@@ -1,6 +1,8 @@
 @media screen and (min-width: 480px) {
   .container {
     width: 426px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .benefits__list {
@@ -22,11 +24,30 @@
   }
 }
 
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-images/mobile__hero-background@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     width: 766px;
   }
 
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-images/hero-background-tablet.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx)  {
+    .hero {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-images/hero-background-tablet@2x.jpg);
+    }
+  }
   .header {
     position: relative;
     height: 70px;
@@ -45,6 +66,10 @@
     gap: 40px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .questioning {
+    display: none;
   }
 
   .address {
@@ -108,145 +133,213 @@
     max-width: 736px;
     min-width: 736px;
   }
+
   .benefits__item {
     max-width: 356px;
   }
+
   .benefits__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-}
-.benefits__text {
-  font-weight: 500;
-}
-.team {
-  padding-bottom: 104px;
-}
-.team__list {
-  display: flex;
-  justify-content: center;
-  row-gap: 64px;
-  column-gap: 24px;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-.customers__list {
-  column-gap: 24px;
-  row-gap: 72px;
-}
-.customers {
-  padding-top: 93px;
-}
-.footer__container {
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.footer__information {
-  margin-bottom: 72px;
-  margin-right: 24px;
-}
-.footer-social-container {
-  flex-direction: column;
-  align-items: flex-start;
-}
-.footer-subscribe-input {
-  width: 264px;
-  margin-bottom: 0;
-  margin-right: 24px;
-}
-.subscribe-form {
-  flex-direction: row;
-  justify-content: center;
-}
-.subscribe-section{
-  width: 453px;
-  align-items: flex-start;
-}
-.subscribe-btn {
-  height: 40px;
-}
+  }
+
+  .benefits__text {
+    font-weight: 500;
+  }
+
+  .team {
+    padding-bottom: 104px;
+  }
+
+  .team__list {
+    display: flex;
+    justify-content: center;
+    row-gap: 64px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .customers__list {
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .customers {
+    padding-top: 93px;
+  }
+
+  .footer__container {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .footer__information {
+    margin-bottom: 72px;
+    margin-right: 24px;
+  }
+
+  .footer-social-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer-subscribe-input {
+    width: 264px;
+    margin-bottom: 0;
+    margin-right: 24px;
+  }
+
+  .subscribe-form {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .subscribe-section {
+    width: 453px;
+    align-items: flex-start;
+  }
+
+  .subscribe-btn {
+    height: 40px;
+  }
+  .modal {
+    width: 408px;
+  }
 }
 
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
   }
+
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.png);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx)  {
+    .hero {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-desktop-bg@2x.jpg);
+    }
+  }
+
   .logo {
     margin-right: 76px;
   }
+
   .address {
     position: relative;
     top: 0;
     right: 0;
 
     &__list {
-              display: flex;
-          }
-          
-          &__item:not(:last-child) {
-              padding-right: 40px;
-          }
-          
-          
-              
-              &:is(:hover, :focus) {
-                  color: #404BBF
-              }
-              .address__link {
-                font-size: 16px;
-              }
-          }
-    .hero {
-      &__container {
-        padding: 188px 0;
-      }
+      display: flex;
     }
-    .benefits {
-      &__img-background {
-        display: flex;
-        background: #F4F4FD;
-        border-radius: 4px;
-        justify-content: center;
-        padding-bottom: 24px;
-        padding-top: 24px;
-        width: 264px;
-        height: 112px;
-      }
-      &__logo {
-        display: flex;
-        width: 64px;
-        height: 64px;
-      }
-      &__item {
-        max-width: 264px;
-      }
-      &__title {
-        font-weight: 500;
-        font-size: 20px;
-      }
-      &__item {
-        align-items: flex-start;
-      }
-      &__list {
-        row-gap: 0;
-        max-width: 100%;
-        min-width: 100%;
-      }
-      &__text {
-        font-weight: 400;
-      }
+
+    &__item:not(:last-child) {
+      padding-right: 40px;
     }
-    .footer {
-      &__container {
-        align-items: flex-start;
-      }
-      &-social-container {
-        margin-right: 80px;
-      }
-      &__information {
-        margin-bottom: 0;
-        margin-right: 120px;
-      }
+
+
+
+    &:is(:hover, :focus) {
+      color: #404BBF
+    }
+
+    .address__link {
+      font-size: 16px;
     }
   }
+
+  .hero {
+    &__container {
+      padding: 188px 0;
+    }
+  }
+
+  .benefits {
+    &__img-background {
+      display: flex;
+      background: #F4F4FD;
+      border-radius: 4px;
+      justify-content: center;
+      padding-bottom: 24px;
+      padding-top: 24px;
+      width: 264px;
+      height: 112px;
+    }
+
+    &__logo {
+      display: flex;
+      width: 64px;
+      height: 64px;
+    }
+
+    &__item {
+      max-width: 264px;
+    }
+
+    &__title {
+      font-weight: 500;
+      font-size: 20px;
+    }
+
+    &__item {
+      align-items: flex-start;
+    }
+
+    &__list {
+      row-gap: 0;
+      max-width: 100%;
+      min-width: 100%;
+    }
+
+    &__text {
+      font-weight: 400;
+    }
+  }
+
+  .footer {
+    &__container {
+      align-items: flex-start;
+    }
+
+    &-social-container {
+      margin-right: 80px;
+    }
+
+    &__information {
+      margin-bottom: 0;
+      margin-right: 120px;
+    }
+  }
+
+  .questioning {
+
+    display: block;
+
+    &__container {
+      padding-bottom: 120px;
+    }
+
+    &__title {
+      font-size: 36px;
+      line-height: 1.11;
+      letter-spacing: 0.02em;
+      text-transform: capitalize;
+      text-align: center;
+      letter-spacing: 0.02em;
+      color: #2E2F42;
+      margin-bottom: 72px;
+    }
+
+    &__img-list {
+      display: flex;
+      gap: 24px;
+    }
+  }
+}
