--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,21 @@ body {
     padding-top: 96px;
     padding-bottom: 96px;
     flex-direction: column;
-    align-items: center;
 }
 
 .footer__information {
-    text-align: center;
     margin-bottom: 72px;
+}
+
+@media  screen and (max-width: 767px) {
+    .footer__information {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } 
+    .footer__text {
+        text-align: center;
+    }
 }
 
 .footer__logo {
