--- a/scss/base/_mobile-menu.scss
+++ b/scss/base/_mobile-menu.scss
@@ -86,10 +86,11 @@
         
         &__social-setings-list {
             display: flex;
-            justify-content: space-around;
-            max-width: 328px;
-            margin-left: 25px;
-            margin-right: 45px;
+            justify-content: flex-start;
+            width: calc((100% - 36px));
+            margin-left: auto;
+            margin-right: auto;
+            column-gap: 56px;
         }
         
         &__social-logo {
